--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "moment": "^2.30.1",
     "next": "^15.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/node": "^20",
