--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
-    "moment": "^2.30.1",
     "next": "^15.1.0",
+    "next-intl": "^3.26.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
