--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/_components/insight-card/main-insight-card/TopicInsight.tsx", "src/_pages/works-showcase/work-showcase-card/WorkShowcaseCardText.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/_components/insight-card/main-insight-card/TopicInsight.tsx",
+    "src/_components/work-showcase-card/WorkShowcaseCardText.tsx"
+  ],
   "exclude": ["node_modules"]
 }
