--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@types/nodemailer": "^6.4.17",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "gsap": "^3.12.7",
+    "lenis": "^1.1.20",
     "lodash": "^4.17.21",
     "next": "^15.1.0",
     "next-intl": "^3.26.3",
