--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
+    "split-type": "^0.3.4",
     "swiper": "^11.1.15",
     "zod": "^3.24.1"
   },
